@@ -1,3 +1,7 @@
+2000-11-03  Dirk Herrmann  <D.Herrmann@tu-bs.de>
+
+	* tests/gc.test:  Added.
+
 2000-10-30  Dirk Herrmann  <D.Herrmann@tu-bs.de>
 
 	* tests/strings.test:  string=? is fixed.
